<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/library"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:actionLayout="@layout/toolbar"
        android:icon="@drawable/my_library"
        android:orderInCategory="200"
        android:title="My library"
        android:titleCondensed="@string/main_menu_libraru"
        app:showAsAction="ifRoom" />
    <item
        android:titleCondensed="@string/main_book_page"
        android:id="@+id/main_book"
        android:icon="@drawable/main_book"
        android:orderInCategory="100"
        android:actionLayout="@layout/toolbar"
        android:title="Main book"
        app:showAsAction="ifRoom"/>
    <item
        android:titleCondensed="@string/main_menu_exit"
        android:id="@+id/settings"
        android:icon="@drawable/exit_to_app"
        android:orderInCategory="300"
        android:actionLayout="@layout/toolbar"
        android:title="setting text"
        app:showAsAction="ifRoom"/>
</menu>